front-end/src/app/core/components/list-item/list-item.component.css
.list-item {
    display: flex;
    border-bottom: 3px solid var(--offwhite-light);
    position: relative;
    align-items: stretch;
    min-height: 4rem;
}

.alt-color {
    background-color: var(--body-color-alt);
}

.columns {
    display: flex;
    flex: 5;
}

.remove-btn {
    text-transform: uppercase;
    font-size: 0.75rem;
    font-weight: 600;
    outline: none;
    border: none;
    min-width: 0;
    flex: 1;
    background-color: var(--dark-red);
}

.remove-btn:hover {
    cursor: pointer;
    background-color: var(--dark-text);
    background-color: var(--darkest-red);
}

.column {
    flex: 1;
    display: flex;
    align-items: center;
    min-width: 0;
    padding: 0 0.5rem 0 0.5rem;
}

.column:not(:last-child) {
    border-right: 1px solid var(--offwhite-light);
}

span {
    overflow: hidden;
    text-overflow: ellipsis;
    font-size: 0.75rem;
}

@media screen and (min-width: 460px) {
    .columns {
        flex: 10;
    }

    .column {
        padding: 0 1rem 0 1rem;
    }

    span {
        font-size: 1rem;
    }
}

